hybrid_compile.log
mpicc -O3 -Iinclude -fopenmp -c -o obj/sobelf_hybrid_3.o sobelf_hybrid_3.c
nvcc -I/Data/IPGen/env/lib/python3.13/site-packages/nvidia/cuda_runtime/include -I./cuda_include -Xcompiler -fPIC --relocatable-device-code=true -include /Data/IPGen/env/lib/python3.13/site-packages/nvidia/cuda_runtime/include/host_config.h  -c -o obj/sobelf_hybrid_3_cuda.o sobelf_hybrid_3.cu
In file included from /Data/IPGen/env/lib/python3.13/site-packages/nvidia/cuda_runtime/include/cuda_runtime.h:82,
                 from <command-line>:
./cuda_include/crt/host_config.h:9:2: warning: #warning "Using fixed host_config.h" [-Wcpp]
    9 | #warning "Using fixed host_config.h"
      |  ^~~~~~~
In file included from <command-line>:
/Data/IPGen/env/lib/python3.13/site-packages/nvidia/cuda_runtime/include/host_config.h:54:2: warning: #warning "host_config.h is an internal header file and must not be used directly.  This file will be removed in a future CUDA release.  Please use cuda_runtime_api.h or cuda_runtime.h instead." [-Wcpp]
   54 | #warning "host_config.h is an internal header file and must not be used directly.  This file will be removed in a future CUDA release.  Please use cuda_runtime_api.h or cuda_runtime.h instead."
      |  ^~~~~~~
/usr/local/cuda/bin/../targets/x86_64-linux/include/crt/common_functions.h(91): error: explicit type is missing ("int" assumed)
  extern _CRTIMP __attribute__((host)) __attribute__((device)) __attribute__((device_builtin)) __attribute__((cudart_builtin)) clock_t clock(void)
         ^

/usr/local/cuda/bin/../targets/x86_64-linux/include/crt/common_functions.h(91): warning #1835-D: attribute "__host__" does not apply here
  extern _CRTIMP __attribute__((host)) __attribute__((device)) __attribute__((device_builtin)) __attribute__((cudart_builtin)) clock_t clock(void)
                                ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

/usr/local/cuda/bin/../targets/x86_64-linux/include/crt/common_functions.h(91): warning #1835-D: attribute "cudart_builtin" does not apply here
  extern _CRTIMP __attribute__((host)) __attribute__((device)) __attribute__((device_builtin)) __attribute__((cudart_builtin)) clock_t clock(void)
                                                                                                              ^

/usr/local/cuda/bin/../targets/x86_64-linux/include/crt/common_functions.h(91): error: expected a ";"
  extern _CRTIMP __attribute__((host)) __attribute__((device)) __attribute__((device_builtin)) __attribute__((cudart_builtin)) clock_t clock(void)
                                                                                                                               ^

/usr/local/cuda/bin/../targets/x86_64-linux/include/crt/common_functions.h(95): warning #12-D: parsing restarts here after previous syntax error
        ;
        ^

2 errors detected in the compilation of "sobelf_hybrid_3.cu".
make: *** [Makefile.hybrid:26: obj/sobelf_hybrid_3_cuda.o] Error 2
